Fix black cal message box buttons being teeny-tiny. Fixed title overflowing. (I had to make it shorter.) Fixed black cal button being off-screen to the right.

--- a/src/assets/whitelook-common.css
+++ b/src/assets/whitelook-common.css
@@ -32,6 +32,11 @@ the changes made to the clipped region will get overwritten.
   background: rgb(240,240,240);
 }
 
+.QMessageBox .QPushButton {
+  margin: 0;
+  padding: 10px 60px;
+}
+
 .QComboBox {
   /*subcontrol-origin: padding; does nothing but mess up the drop-down button*/
   background: white;
